samples/_failures_safe/1761520663_4418bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4f53a0b.c: In function ‘main’:
./samples/SAFE/__tmp_d4f53a0b.c:170:9: error: expected declaration or statement at end of input
  170 |         sm->buffer[sm->buffer_size - 1] = '\0';
      |         ^~
./samples/SAFE/__tmp_d4f53a0b.c:170:9: error: expected declaration or statement at end of input
